// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Storage Construct with Lambda processor 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afArtifactHash70BCA2DB": Object {
      "Description": "Artifact hash for asset \\"605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35af\\"",
      "Type": "String",
    },
    "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afS3Bucket99E9F277": Object {
      "Description": "S3 bucket for asset \\"605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35af\\"",
      "Type": "String",
    },
    "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afS3VersionKey099DDC12": Object {
      "Description": "S3 key for asset version \\"605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35af\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "EventStorageTestFirehosePolicy5A230078": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "logs:PutLogEvents",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupACB75E85",
                    },
                    ":log-stream:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehosePolicy5A230078",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestFirehoseRole9A5FD08D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "EventStorageTestFirehoseRoleDefaultPolicyE272AE26": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "testBucketDF4D7D1A",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "testBucketDF4D7D1A",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehoseRoleDefaultPolicyE272AE26",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestKinesisFirehose442A2573": Object {
      "Properties": Object {
        "ExtendedS3DestinationConfiguration": Object {
          "BucketARN": Object {
            "Fn::GetAtt": Array [
              "testBucketDF4D7D1A",
              "Arn",
            ],
          },
          "BufferingHints": Object {
            "IntervalInSeconds": 300,
            "SizeInMBs": 64,
          },
          "CloudWatchLoggingOptions": Object {
            "Enabled": true,
            "LogGroupName": Object {
              "Ref": "EventStorageTestfirehoseloggroupACB75E85",
            },
            "LogStreamName": Object {
              "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
            },
          },
          "CompressionFormat": "GZIP",
          "ErrorOutputPrefix": "testPrefix/error/!{firehose:random-string}/!{firehose:error-output-type}/created_at=!{timestamp:yyyy-MM-dd}/",
          "Prefix": "testPrefix/created_at=!{timestamp:yyyy-MM-dd}/",
          "ProcessingConfiguration": Object {
            "Enabled": true,
            "Processors": Array [
              Object {
                "Parameters": Array [
                  Object {
                    "ParameterName": "LambdaArn",
                    "ParameterValue": Object {
                      "Fn::GetAtt": Array [
                        "EventStorageTestLambdaFunction0DDD544F",
                        "Arn",
                      ],
                    },
                  },
                ],
                "Type": "Lambda",
              },
            ],
          },
          "RoleARN": Object {
            "Fn::GetAtt": Array [
              "EventStorageTestFirehoseRole9A5FD08D",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "EventStorageTestLambdaFunction0DDD544F": Object {
      "DependsOn": Array [
        "EventStorageTestLambdaFunctionServiceRoleDefaultPolicy51A8DD20",
        "EventStorageTestLambdaFunctionServiceRole28BD7F58",
      ],
      "Metadata": Object {
        "cfn_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "W58",
              "reason": "Lambda functions has the required permission to write CloudWatch Logs. It uses custom policy instead of arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole with more tighter permissions.",
            },
          ],
        },
      },
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afS3Bucket99E9F277",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afS3VersionKey099DDC12",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters605f9425e66cabf7585f9cdfc6db214c0d9ed419cd53730f3e4595af862d35afS3VersionKey099DDC12",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "EventStorageTestLambdaFunctionServiceRole28BD7F58",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "TracingConfig": Object {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "EventStorageTestLambdaFunctionServiceRole28BD7F58": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "LambdaFunctionServiceRolePolicy",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EventStorageTestLambdaFunctionServiceRoleDefaultPolicy51A8DD20": Object {
      "Metadata": Object {
        "cfn_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "W12",
              "reason": "Lambda needs the following minimum required permissions to send trace data to X-Ray.",
            },
          ],
        },
      },
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestLambdaFunctionServiceRoleDefaultPolicy51A8DD20",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestLambdaFunctionServiceRole28BD7F58",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestLambdaProcessor4069EDCC": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "lambda:InvokeFunction",
                "lambda:GetFunctionConfiguration",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "EventStorageTestLambdaFunction0DDD544F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestLambdaProcessor4069EDCC",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestfirehoseloggroupACB75E85": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "LogGroupName": Object {
          "Ref": "EventStorageTestfirehoseloggroupACB75E85",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "testBucketDF4D7D1A": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`Event Storage Construct with props 1`] = `
Object {
  "Resources": Object {
    "EventStorageTestFirehosePolicy5A230078": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "logs:PutLogEvents",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupACB75E85",
                    },
                    ":log-stream:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehosePolicy5A230078",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestFirehoseRole9A5FD08D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "EventStorageTestFirehoseRoleDefaultPolicyE272AE26": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "testBucketDF4D7D1A",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "testBucketDF4D7D1A",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehoseRoleDefaultPolicyE272AE26",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestKinesisFirehose442A2573": Object {
      "Properties": Object {
        "ExtendedS3DestinationConfiguration": Object {
          "BucketARN": Object {
            "Fn::GetAtt": Array [
              "testBucketDF4D7D1A",
              "Arn",
            ],
          },
          "BufferingHints": Object {
            "IntervalInSeconds": 300,
            "SizeInMBs": 64,
          },
          "CloudWatchLoggingOptions": Object {
            "Enabled": true,
            "LogGroupName": Object {
              "Ref": "EventStorageTestfirehoseloggroupACB75E85",
            },
            "LogStreamName": Object {
              "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
            },
          },
          "CompressionFormat": "UNCOMPRESSED",
          "ErrorOutputPrefix": "test-prefix/error/!{firehose:random-string}/!{firehose:error-output-type}/created_at=!{timestamp:yyyy-MM-dd}/",
          "Prefix": "test-prefix/created_at=!{timestamp:yyyy-MM-dd}/",
          "RoleARN": Object {
            "Fn::GetAtt": Array [
              "EventStorageTestFirehoseRole9A5FD08D",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "EventStorageTestfirehoseloggroupACB75E85": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "LogGroupName": Object {
          "Ref": "EventStorageTestfirehoseloggroupACB75E85",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "testBucketDF4D7D1A": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`Event Storage Construct without props 1`] = `
Object {
  "Resources": Object {
    "EventStorageTestFirehosePolicy5A230078": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "logs:PutLogEvents",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupACB75E85",
                    },
                    ":log-stream:",
                    Object {
                      "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehosePolicy5A230078",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestFirehoseRole9A5FD08D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "firehose.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "EventStorageTestFirehoseRoleDefaultPolicyE272AE26": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "testBucketDF4D7D1A",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "testBucketDF4D7D1A",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventStorageTestFirehoseRoleDefaultPolicyE272AE26",
        "Roles": Array [
          Object {
            "Ref": "EventStorageTestFirehoseRole9A5FD08D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventStorageTestKinesisFirehose442A2573": Object {
      "Properties": Object {
        "ExtendedS3DestinationConfiguration": Object {
          "BucketARN": Object {
            "Fn::GetAtt": Array [
              "testBucketDF4D7D1A",
              "Arn",
            ],
          },
          "BufferingHints": Object {
            "IntervalInSeconds": 300,
            "SizeInMBs": 64,
          },
          "CloudWatchLoggingOptions": Object {
            "Enabled": true,
            "LogGroupName": Object {
              "Ref": "EventStorageTestfirehoseloggroupACB75E85",
            },
            "LogStreamName": Object {
              "Ref": "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C",
            },
          },
          "CompressionFormat": "GZIP",
          "RoleARN": Object {
            "Fn::GetAtt": Array [
              "EventStorageTestFirehoseRole9A5FD08D",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::KinesisFirehose::DeliveryStream",
    },
    "EventStorageTestfirehoseloggroupACB75E85": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "EventStorageTestfirehoseloggroupfirehoselogstreamD3224E6C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "LogGroupName": Object {
          "Ref": "EventStorageTestfirehoseloggroupACB75E85",
        },
      },
      "Type": "AWS::Logs::LogStream",
      "UpdateReplacePolicy": "Retain",
    },
    "testBucketDF4D7D1A": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
